<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/asa">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayoutlog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotham"
        android:text="LogIn"
        android:textColor="#ffffff"
        android:textSize="32sp"
         />
    <View
        android:layout_width="30dp"
        android:layout_height="2dp"
        android:background="#FF0000"
        android:layout_gravity="end"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/calibri"
        android:gravity="center"
        android:text="@string/wellcome"
        android:textColor="#9affffff"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188" />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#96ffffff">

            <EditText
                android:id="@+id/editviewUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableRight="@drawable/ic_email_white_24dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/calibri"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:drawableEnd="@drawable/ic_email_white_24dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#96ffffff">

            <EditText
                android:id="@+id/editTextpassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableRight="@drawable/ic_lock_white_24dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/calibri"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:drawableEnd="@drawable/ic_lock_white_24dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:background="@drawable/buttonshapewhitebg"
                android:fontFamily="@font/calibri"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="#96ffffff"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginEnd="16dp" />

            <Button
                android:layout_width="wrap_content"
                android:id="@+id/buttonLogin"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:background="@drawable/buttonshapewhitebg"
                android:fontFamily="@font/calibri"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="#96ffffff"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="16dp" />


        </LinearLayout>


        <TextView
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/calibri"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="#96ffffff"
            android:textSize="16sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934"
        android:orientation="horizontal">

        <com.shaishavgandhi.loginbuttons.GoogleButton
            android:layout_width="75dp"
            app:roundedCorner="true"
            app:transparentBackground="true"
            app:roundedCornerRadius="75dp"
            app:iconSize="30dp"
            android:layout_height="75dp"/>

        <com.shaishavgandhi.loginbuttons.FacebookButton
            android:layout_width="75dp"
            app:roundedCorner="true"
            app:transparentBackground="true"
            app:roundedCornerRadius="75dp"
            app:iconSize="30dp"
            android:layout_marginLeft="10dp"
            android:layout_height="75dp"/>

        <com.shaishavgandhi.loginbuttons.TwitterButton
            android:layout_width="75dp"
            app:roundedCorner="true"
            app:transparentBackground="true"
            app:roundedCornerRadius="75dp"
            app:iconSize="30dp"
            android:layout_marginLeft="10dp"
            android:layout_height="75dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>